<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rviz_min_max_cur_overlay</name>
    <version>0.0.1</version>
    <description>RViz2 overlay plugin for displaying min/max/current values</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>rviz_common</depend>
    <depend>rviz_rendering</depend>
    <depend>rviz_default_plugins</depend>
    <depend>pluginlib</depend>
    <depend>qtbase5-dev</depend>
    <depend>rviz_ogre_vendor</depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
