<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rviz_min_max_cur_overlay</name>
    <version>0.0.1</version>
    <description>RViz plugin for displaying min/max/current values as an overlay</description>

    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>rviz_common</build_depend>
    <build_depend>rviz_rendering</build_depend>
    <build_depend>rviz_default_plugins</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>qtbase5-dev</build_depend>
    <build_depend>rviz_ogre_vendor</build_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>rviz_common</exec_depend>
    <exec_depend>rviz_rendering</exec_depend>
    <exec_depend>rviz_default_plugins</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>qtbase5-dev</exec_depend>
    <exec_depend>rviz_ogre_vendor</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
